--- a/stable-diffusion-models/download.ipynb
+++ b/stable-diffusion-models/download.ipynb
@@ -1455,6 +1455,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Download anime-detailer-xl-lora\n",
+    "hf_hub_download(repo_id=\"Linaqruf/anime-detailer-xl-lora\", filename=\"anime-detailer-xl.safetensors\", local_dir=sdxl_lora_dir)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 120,
    "metadata": {},
    "outputs": [],
@@ -2484,6 +2494,22 @@
    "source": [
     "# Delete cache\n",
     "!rm -rf {sd35_large_clip_dir}/.cache"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Lora"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hf_hub_download(repo_id=\"prithivMLmods/SD3.5-Large-Anime-LoRA\", filename=\"SD3.5-Large-Anime-LoRA.safetensors\", local_dir=\"./models/loras/sd35_large\")"
    ]
   },
   {
