--- a/stable-diffusion-models/download.ipynb
+++ b/stable-diffusion-models/download.ipynb
@@ -1439,6 +1439,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Download Original Character - 南飛鳥(Minami Asuka) XL for Animagine XL 3.1 (Revision 1) LoRA\n",
+    "hf_hub_download(repo_id=\"bean980310/minami-asuka-xl-animagine-rev-1\", filename=\"minami-asuka-xl-animagine-rev-1.safetensors\", local_dir=sdxl_lora_dir)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Download Tomboy XL for Animagine XL 3.1 LoRA\n",
     "hf_hub_download(repo_id=\"bean980310/tomboy-xl-animagine\", filename=\"tomboy-xl-animagine.safetensors\", local_dir=sdxl_lora_dir)"
    ]
