--- a/stable-diffusion-models/download.ipynb
+++ b/stable-diffusion-models/download.ipynb
@@ -2221,6 +2221,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Download SD 3.5 Large Modern Anime Full Model\n",
+    "hf_hub_download(repo_id=\"alfredplpl/sd3-5-large-modern-anime-full\", filename=\"sd3_5_large_modern_anime_full.safetensors\", local_dir=sd35_large_ckpt_dir)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 173,
    "metadata": {},
    "outputs": [],
@@ -2519,6 +2529,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Download SD3.5-Large-Anime-LoRA\n",
     "hf_hub_download(repo_id=\"prithivMLmods/SD3.5-Large-Anime-LoRA\", filename=\"SD3.5-Large-Anime-LoRA.safetensors\", local_dir=\"./models/loras/sd35_large\")"
    ]
   },
@@ -2528,7 +2539,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "civitai_download(model_version_id=1042731, local_dir=\"./models/loras/sd35_large\")"
+    "# civitai_download(model_version_id=1042731, local_dir=\"./models/loras/sd35_large\")"
    ]
   },
   {
