--- a/stable-diffusion-models/download.ipynb
+++ b/stable-diffusion-models/download.ipynb
@@ -1460,7 +1460,7 @@
    "outputs": [],
    "source": [
     "# Download headswap XL for Animagine XL 3.1 LoRA\n",
-    "hf_hub_download(repo_id=\"bean980310/headswap_xl_animagine\", filename=\"headswap_xl_animagine.safetensors\", local_dir=sdxl_lora_dir)"
+    "hf_hub_download(repo_id=\"bean980310/headswap-xl-animagine\", filename=\"headswap-xl-animagine.safetensors\", local_dir=sdxl_lora_dir)"
    ]
   },
   {
