--- a/stable-diffusion-models/download.ipynb
+++ b/stable-diffusion-models/download.ipynb
@@ -2250,13 +2250,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**Stable Diffusion 3**"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -2266,7 +2259,7 @@
     "if os.path.exists(f\"{sd3_clip_dir}/clip_l.safetensors\"):\n",
     "    pass\n",
     "else:\n",
-    "    hf_hub_download(repo_id=\"stabilityai/stable-diffusion-3-medium\", filename=\"clip_l.safetensors\", subfolder='text_encoders', local_dir=sd3_clip_dir)\n",
+    "    hf_hub_download(repo_id=\"stabilityai/stable-diffusion-3.5-medium\", filename=\"clip_l.safetensors\", subfolder='text_encoders', local_dir=sd3_clip_dir)\n",
     "    filename='clip_l.safetensors'\n",
     "    src=os.path.join(sd3_clip_dir, 'text_encoders')\n",
     "    dst=os.path.join(sd3_clip_dir)\n",
@@ -2284,7 +2277,7 @@
     "if os.path.exists(f\"{sd3_clip_dir}/clip_g.safetensors\"):\n",
     "    pass\n",
     "else:\n",
-    "    hf_hub_download(repo_id=\"stabilityai/stable-diffusion-3-medium\", filename=\"clip_g.safetensors\", subfolder='text_encoders', local_dir=sd3_clip_dir)\n",
+    "    hf_hub_download(repo_id=\"stabilityai/stable-diffusion-3.5-large\", filename=\"clip_g.safetensors\", subfolder='text_encoders', local_dir=sd3_clip_dir)\n",
     "    filename='clip_g.safetensors'\n",
     "    src=os.path.join(sd3_clip_dir, 'text_encoders')\n",
     "    dst=os.path.join(sd3_clip_dir)\n",
@@ -2302,7 +2295,7 @@
     "if os.path.exists(f\"{sd3_clip_dir}/t5xxl_fp8_e4m3fn.safetensors\"):\n",
     "    pass\n",
     "else:\n",
-    "    hf_hub_download(repo_id=\"stabilityai/stable-diffusion-3-medium\", filename=\"t5xxl_fp8_e4m3fn.safetensors\", subfolder='text_encoders', local_dir=sd3_clip_dir)\n",
+    "    hf_hub_download(repo_id=\"stabilityai/stable-diffusion-3.5-large\", filename=\"t5xxl_fp8_e4m3fn.safetensors\", subfolder='text_encoders', local_dir=sd3_clip_dir)\n",
     "    filename='t5xxl_fp8_e4m3fn.safetensors'\n",
     "    src=os.path.join(sd3_clip_dir, 'text_encoders')\n",
     "    dst=os.path.join(sd3_clip_dir)\n",
@@ -2320,7 +2313,7 @@
     "if os.path.exists(f\"{sd3_clip_dir}/t5xxl_fp16.safetensors\"):\n",
     "    pass\n",
     "else:\n",
-    "    hf_hub_download(repo_id=\"stabilityai/stable-diffusion-3-medium\", filename=\"t5xxl_fp16.safetensors\", subfolder='text_encoders', local_dir=sd3_clip_dir)\n",
+    "    hf_hub_download(repo_id=\"stabilityai/stable-diffusion-3.5-large\", filename=\"t5xxl_fp16.safetensors\", subfolder='text_encoders', local_dir=sd3_clip_dir)\n",
     "    filename='t5xxl_fp16.safetensors'\n",
     "    src=os.path.join(sd3_clip_dir, 'text_encoders')\n",
     "    dst=os.path.join(sd3_clip_dir)\n",
@@ -2336,184 +2329,6 @@
    "source": [
     "# Delete cache\n",
     "!rm -rf {sd3_clip_dir}/.cache"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**Stable Diffusion 3.5 Medium**"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Download Clip L\n",
-    "if os.path.exists(f\"{sd35_medium_clip_dir}/clip_l.safetensors\"):\n",
-    "    pass\n",
-    "else:\n",
-    "    hf_hub_download(repo_id=\"stabilityai/stable-diffusion-3.5-medium\", filename=\"clip_l.safetensors\", subfolder='text_encoders', local_dir=sd35_medium_clip_dir)\n",
-    "    filename='clip_l.safetensors'\n",
-    "    src=os.path.join(sd35_medium_clip_dir, 'text_encoders')\n",
-    "    dst=os.path.join(sd35_medium_clip_dir)\n",
-    "    shutil.move(os.path.join(src, filename), os.path.join(dst, filename))\n",
-    "    os.rmdir(src)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Download Clip G\n",
-    "if os.path.exists(f\"{sd35_medium_clip_dir}/clip_g.safetensors\"):\n",
-    "    pass\n",
-    "else:\n",
-    "    hf_hub_download(repo_id=\"stabilityai/stable-diffusion-3.5-medium\", filename=\"clip_g.safetensors\", subfolder='text_encoders', local_dir=sd35_medium_clip_dir)\n",
-    "    filename='clip_g.safetensors'\n",
-    "    src=os.path.join(sd35_medium_clip_dir, 'text_encoders')\n",
-    "    dst=os.path.join(sd35_medium_clip_dir)\n",
-    "    shutil.move(os.path.join(src, filename), os.path.join(dst, filename))\n",
-    "    os.rmdir(src)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Download T5 XXL FP8\n",
-    "if os.path.exists(f\"{sd35_medium_clip_dir}/t5xxl_fp8_e4m3fn.safetensors\"):\n",
-    "    pass\n",
-    "else:\n",
-    "    hf_hub_download(repo_id=\"stabilityai/stable-diffusion-3.5-medium\", filename=\"t5xxl_fp8_e4m3fn.safetensors\", subfolder='text_encoders', local_dir=sd35_medium_clip_dir)\n",
-    "    filename='t5xxl_fp8_e4m3fn.safetensors'\n",
-    "    src=os.path.join(sd35_medium_clip_dir, 'text_encoders')\n",
-    "    dst=os.path.join(sd35_medium_clip_dir)\n",
-    "    shutil.move(os.path.join(src, filename), os.path.join(dst, filename))\n",
-    "    os.rmdir(src)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Download T5 XXL FP16\n",
-    "if os.path.exists(f\"{sd35_medium_clip_dir}/t5xxl_fp16.safetensors\"):\n",
-    "    pass\n",
-    "else:\n",
-    "    hf_hub_download(repo_id=\"stabilityai/stable-diffusion-3.5-medium\", filename=\"t5xxl_fp16.safetensors\", subfolder='text_encoders', local_dir=sd35_medium_clip_dir)\n",
-    "    filename='t5xxl_fp16.safetensors'\n",
-    "    src=os.path.join(sd35_medium_clip_dir, 'text_encoders')\n",
-    "    dst=os.path.join(sd35_medium_clip_dir)\n",
-    "    shutil.move(os.path.join(src, filename), os.path.join(dst, filename))\n",
-    "    os.rmdir(src)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 183,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Delete cache\n",
-    "!rm -rf {sd35_medium_clip_dir}/.cache"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**Stable Diffusion 3.5 Large**"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 184,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Download Clip L\n",
-    "if os.path.exists(f\"{sd35_large_clip_dir}/clip_l.safetensors\"):\n",
-    "    pass\n",
-    "else:\n",
-    "    hf_hub_download(repo_id=\"stabilityai/stable-diffusion-3.5-large\", filename=\"clip_l.safetensors\", subfolder='text_encoders', local_dir=sd35_large_clip_dir)\n",
-    "    filename='clip_l.safetensors'\n",
-    "    src=os.path.join(sd35_large_clip_dir, 'text_encoders')\n",
-    "    dst=os.path.join(sd35_large_clip_dir)\n",
-    "    shutil.move(os.path.join(src, filename), os.path.join(dst, filename))\n",
-    "    os.rmdir(src)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 185,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Download Clip G\n",
-    "if os.path.exists(f\"{sd35_large_clip_dir}/clip_g.safetensors\"):\n",
-    "    pass\n",
-    "else:\n",
-    "    hf_hub_download(repo_id=\"stabilityai/stable-diffusion-3.5-large\", filename=\"clip_g.safetensors\", subfolder='text_encoders', local_dir=sd35_large_clip_dir)\n",
-    "    filename='clip_g.safetensors'\n",
-    "    src=os.path.join(sd35_large_clip_dir, 'text_encoders')\n",
-    "    dst=os.path.join(sd35_large_clip_dir)\n",
-    "    shutil.move(os.path.join(src, filename), os.path.join(dst, filename))\n",
-    "    os.rmdir(src)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 186,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Download T5 XXL FP8\n",
-    "if os.path.exists(f\"{sd35_large_clip_dir}/t5xxl_fp8_e4m3fn.safetensors\"):\n",
-    "    pass\n",
-    "else:\n",
-    "    hf_hub_download(repo_id=\"stabilityai/stable-diffusion-3.5-large\", filename=\"t5xxl_fp8_e4m3fn.safetensors\", subfolder='text_encoders', local_dir=sd35_large_clip_dir)\n",
-    "    filename='t5xxl_fp8_e4m3fn.safetensors'\n",
-    "    src=os.path.join(sd35_large_clip_dir, 'text_encoders')\n",
-    "    dst=os.path.join(sd35_large_clip_dir)\n",
-    "    shutil.move(os.path.join(src, filename), os.path.join(dst, filename))\n",
-    "    os.rmdir(src)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 187,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Download T5 XXL FP16\n",
-    "if os.path.exists(f\"{sd35_large_clip_dir}/t5xxl_fp16.safetensors\"):\n",
-    "    pass\n",
-    "else:\n",
-    "    hf_hub_download(repo_id=\"stabilityai/stable-diffusion-3.5-large\", filename=\"t5xxl_fp16.safetensors\", subfolder='text_encoders', local_dir=sd35_large_clip_dir)\n",
-    "    filename='t5xxl_fp16.safetensors'\n",
-    "    src=os.path.join(sd35_large_clip_dir, 'text_encoders')\n",
-    "    dst=os.path.join(sd35_large_clip_dir)\n",
-    "    shutil.move(os.path.join(src, filename), os.path.join(dst, filename))\n",
-    "    os.rmdir(src)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 188,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Delete cache\n",
-    "!rm -rf {sd35_large_clip_dir}/.cache"
    ]
   },
   {
@@ -3107,7 +2922,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.14"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
