--- a/run_first.ipynb
+++ b/run_first.ipynb
@@ -241,15 +241,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%pip install torch torchvision torchaudio"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "%conda install -y pytorch torchvision torchaudio pytorch-cuda=12.4 -c pytorch -c nvidia"
    ]
   },
@@ -266,7 +257,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%pip install huggingface-hub transformers diffusers safetensors tokenizers datasets peft gradio"
+    "%conda install -y hugginngface_hub"
    ]
   },
   {
@@ -275,7 +266,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%conda install -y huggingface_hub transformers safetensors tokenizers datasets -c huggingface"
+    "%conda install -y transformers safetensors tokenizers datasets diffusers accelerate sentence-transformers -c conda-forge "
    ]
   },
   {
@@ -284,16 +275,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%conda install -y diffusers accelerate sentence-transformers -c conda-forge "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%pip install peft gradio"
+    "%conda install -y peft gradio -c pypi"
    ]
   },
   {
@@ -309,7 +291,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%pip install tensorflow tensorboard tensorboardx"
+    "%conda install -y tensorflow tensorboard tensorboardx -c pypi"
    ]
   },
   {
@@ -325,7 +307,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%pip install onnxruntime-gpu onnx"
+    "%conda install -y onnxruntime-gpu onnx -c pypi"
    ]
   },
   {
@@ -341,7 +323,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%pip install civitai-model-downloader"
+    "%conda install -y civitai_model_downloader -c bean980310 -c pypi"
    ]
   },
   {
@@ -512,7 +494,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.14"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
