--- a/run_first.ipynb
+++ b/run_first.ipynb
@@ -241,7 +241,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%conda install -y pytorch torchvision torchaudio pytorch-cuda=12.4 -c pytorch -c nvidia"
+    "%pip install torch torchvision torchaudio"
    ]
   },
   {
@@ -257,7 +257,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%conda install -y hugginngface_hub"
+    "%pip install \"huggingface_hub[cli]\""
    ]
   },
   {
@@ -266,16 +266,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%conda install -y transformers safetensors tokenizers datasets diffusers accelerate sentence-transformers -c conda-forge "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%conda install -y peft gradio -c pypi"
+    "%pip install transformers safetensors tokenizers datasets diffusers accelerate sentence-transformers peft gradio"
    ]
   },
   {
@@ -291,7 +282,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%conda install -y tensorflow tensorboard tensorboardx -c pypi"
+    "%pip install tensorflow tensorboard tensorboardx"
    ]
   },
   {
@@ -307,7 +298,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%conda install -y onnxruntime-gpu onnx -c pypi"
+    "%pip install onnxruntime-gpu onnx"
    ]
   },
   {
@@ -323,7 +314,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%conda install -y civitai_model_downloader -c bean980310 -c pypi"
+    "%pip install civitai_model_downloader"
    ]
   },
   {
@@ -494,7 +485,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "undefined.undefined.undefined"
   }
  },
  "nbformat": 4,
