--- a/stable-diffusion-models/download.ipynb
+++ b/stable-diffusion-models/download.ipynb
@@ -3420,6 +3420,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Download deepseek-ai/DeepSeek-R1 Model\n",
+    "snapshot_download(repo_id=\"deepseek-ai/DeepSeek-R1\", local_dir=f\"{deepseek_transformers_dir}/deepseek-ai__DeepSeek-R1\", ignore_patterns=[\"*.md\", \".gitattributes\", \"original/\", \"LICENSE.txt\", \"LICENSE\"])"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
