--- a/stable-diffusion-models/download.ipynb
+++ b/stable-diffusion-models/download.ipynb
@@ -1147,6 +1147,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Download AnimagineXL 4.0 Model\n",
+    "hf_hub_download(repo_id=\"cagliostrolab/animagine-xl-4.0\", filename=\"animagine-xl-4.0.safetensors\", local_dir=sdxl_ckpt_dir)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Download Gamma XL NSFW for Anything XL Model\n",
     "civitai_download(model_version_id=412021, local_dir=sdxl_ckpt_dir)"
    ]
@@ -1449,6 +1459,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Download Original Character - 真琴乃葵(Makotono Aoi) XL for Animagine XL 3.1 LoRA\n",
+    "hf_hub_download(repo_id=\"bean980310/makotono-aoi-xl-animagine\", filename=\"makotono-aoi-xl-animagine.safetensors\", local_dir=sdxl_lora_dir)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Download Original Character - 愛野小糸(Aino Koito) XL for Animagine XL 3.1 LoRA\n",
+    "hf_hub_download(repo_id=\"bean980310/aino-koito-xl-animagine\", filename=\"aino-koito-xl-animagine.safetensors\", local_dir=sdxl_lora_dir)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Download Tomboy XL for Animagine XL 3.1 LoRA\n",
     "hf_hub_download(repo_id=\"bean980310/tomboy-xl-animagine\", filename=\"tomboy-xl-animagine.safetensors\", local_dir=sdxl_lora_dir)"
    ]
@@ -1461,6 +1491,36 @@
    "source": [
     "# Download headswap XL for Animagine XL 3.1 LoRA\n",
     "hf_hub_download(repo_id=\"bean980310/headswap-xl-animagine\", filename=\"headswap-xl-animagine.safetensors\", local_dir=sdxl_lora_dir)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Download Original Character - 南飛鳥(Minami Asuka) XL for Animagine XL 4.0 beta LoRA\n",
+    "hf_hub_download(repo_id=\"bean980310/minami-asuka-xl-animagine-xl-4-beta\", filename=\"minami-asuka-xl-animagine-xl-4-beta.safetensors\", local_dir=sdxl_lora_dir)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Download Original Character - 真琴乃葵(Makotono Aoi) XL for Animagine XL 4.0 beta LoRA\n",
+    "hf_hub_download(repo_id=\"bean980310/makotono-aoi-xl-animagine-xl-4-beta\", filename=\"makotono-aoi-xl-animagine-xl-4-beta.safetensors\", local_dir=sdxl_lora_dir)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Download Original Character - 愛野小糸(Aino Koito) XL for Animagine XL 4.0 beta LoRA\n",
+    "hf_hub_download(repo_id=\"bean980310/aino-koito-xl-animagine-xl-4-beta\", filename=\"aino-koito-xl-animagine-xl-4-beta.safetensors\", local_dir=sdxl_lora_dir)"
    ]
   },
   {
