--- a/stable-diffusion-models/download.ipynb
+++ b/stable-diffusion-models/download.ipynb
@@ -3034,6 +3034,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Download meta-llama/Llama-3.1-70B-Instruct Model\n",
+    "snapshot_download(repo_id=\"meta-llama/Llama-3.1-70B-Instruct\", local_dir=f\"{llama_transformers_dir}/meta-llama__Llama-3.1-70B-Instruct\", ignore_patterns=[\"*.md\", \".gitattributes\", \"original/\", \"LICENSE.txt\", \"LICENSE\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Download meta-llama/Llama-3.1-405B-Instruct Model\n",
+    "snapshot_download(repo_id=\"meta-llama/Llama-3.1-405B-Instruct\", local_dir=f\"{llama_transformers_dir}/meta-llama__Llama-3.1-405B-Instruct\", ignore_patterns=[\"*.md\", \".gitattributes\", \"original/\", \"LICENSE.txt\", \"LICENSE\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Download meta-llama/Llama-3.2-11B-Vision Model\n",
     "snapshot_download(repo_id=\"meta-llama/Llama-3.2-11B-Vision\", local_dir=f\"{llama_transformers_dir}/meta-llama__Llama-3.2-11B-Vision\", ignore_patterns=[\"*.md\", \".gitattributes\", \"original/\", \"LICENSE.txt\", \"LICENSE\"])"
    ]
@@ -3046,6 +3066,16 @@
    "source": [
     "# Download meta-llama/Llama-3.2-11B-Vision-Instruct Model\n",
     "snapshot_download(repo_id=\"meta-llama/Llama-3.2-11B-Vision-Instruct\", local_dir=f\"{llama_transformers_dir}/meta-llama__Llama-3.2-11B-Vision-Instruct\", ignore_patterns=[\"*.md\", \".gitattributes\", \"original/\", \"LICENSE.txt\", \"LICENSE\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Download meta-llama/Llama-3.2-90B-Vision-Instruct Model\n",
+    "snapshot_download(repo_id=\"meta-llama/Llama-3.2-90B-Vision-Instruct\", local_dir=f\"{llama_transformers_dir}/meta-llama__Llama-3.2-90B-Vision-Instruct\", ignore_patterns=[\"*.md\", \".gitattributes\", \"original/\", \"LICENSE.txt\", \"LICENSE\"])"
    ]
   },
   {
@@ -3153,6 +3183,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Download mlx-community/Meta-Llama-3.2-90B-Vision-Instruct-4bit Model\n",
+    "snapshot_download(repo_id=\"mlx-community/Llama-3.2-90B-Vision-Instruct-4bit\", local_dir=f\"{llama_mlx_dir}/mlx-community__Llama-3.2-90B-Vision-Instruct-4bit\", ignore_patterns=[\"*.md\", \".gitattributes\", \"original/\", \"LICENSE.txt\", \"LICENSE\"])"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -3193,6 +3233,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Download Qwen/Qwen2.5-7B-Instruct-1M Model\n",
+    "snapshot_download(repo_id=\"Qwen/Qwen2.5-7B-Instruct-1M\", local_dir=f\"{qwen_transformers_dir}/Qwen__Qwen2.5-7B-Instruct-1M\", ignore_patterns=[\"*.md\", \".gitattributes\", \"original/\", \"LICENSE.txt\", \"LICENSE\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Download unsloth/Qwen2.5-7B-Instruct-bnb-4bit Model\n",
     "snapshot_download(repo_id=\"unsloth/Qwen2.5-7B-Instruct-bnb-4bit\", local_dir=f\"{qwen_transformers_dir}/unsloth__Qwen2.5-7B-Instruct-bnb-4bit\", ignore_patterns=[\"*.md\", \".gitattributes\", \"original/\", \"LICENSE.txt\", \"LICENSE\"])"
    ]
@@ -3205,6 +3255,16 @@
    "source": [
     "# Download Qwen/Qwen2.5-14B-Instruct Model\n",
     "snapshot_download(repo_id=\"Qwen/Qwen2.5-14B-Instruct\", local_dir=f\"{qwen_transformers_dir}/Qwen__Qwen2.5-14B-Instruct\", ignore_patterns=[\"*.md\", \".gitattributes\", \"original/\", \"LICENSE.txt\", \"LICENSE\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Download Qwen/Qwen2.5-14B-Instruct-1M Model\n",
+    "snapshot_download(repo_id=\"Qwen/Qwen2.5-14B-Instruct-1M\", local_dir=f\"{qwen_transformers_dir}/Qwen__Qwen2.5-14B-Instruct-1M\", ignore_patterns=[\"*.md\", \".gitattributes\", \"original/\", \"LICENSE.txt\", \"LICENSE\"])"
    ]
   },
   {
@@ -3255,6 +3315,26 @@
    "source": [
     "# Download unsloth/Qwen2.5-72B-Instruct-bnb-4bit Model\n",
     "snapshot_download(repo_id=\"unsloth/Qwen2.5-72B-Instruct-bnb-4bit\", local_dir=f\"{qwen_transformers_dir}/unsloth__Qwen2.5-72B-Instruct-bnb-4bit\", ignore_patterns=[\"*.md\", \".gitattributes\", \"original/\", \"LICENSE.txt\", \"LICENSE\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Download Qwen/Qwen2.5-VL-7B-Instruct Model\n",
+    "snapshot_download(repo_id=\"Qwen/Qwen2.5-VL-7B-Instruct\", local_dir=f\"{qwen_transformers_dir}/Qwen__Qwen2.5-VL-7B-Instruct\", ignore_patterns=[\"*.md\", \".gitattributes\", \"original/\", \"LICENSE.txt\", \"LICENSE\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Download Qwen/Qwen2.5-VL-72B-Instruct Model\n",
+    "snapshot_download(repo_id=\"Qwen/Qwen2.5-VL-72B-Instruct\", local_dir=f\"{qwen_transformers_dir}/Qwen__Qwen2.5-VL-72B-Instruct\", ignore_patterns=[\"*.md\", \".gitattributes\", \"original/\", \"LICENSE.txt\", \"LICENSE\"])"
    ]
   },
   {
@@ -3310,6 +3390,56 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Download mlx-community/Qwen2.5-7B-Instruct-1M-3bit Model\n",
+    "snapshot_download(repo_id=\"mlx-community/Qwen2.5-7B-Instruct-1M-3bit\", local_dir=f\"{qwen_mlx_dir}/mlx-community__Qwen2.5-7B-Instruct-1M-3bit\", ignore_patterns=[\"*.md\", \".gitattributes\", \"original/\", \"LICENSE.txt\", \"LICENSE\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Download mlx-community/Qwen2.5-7B-Instruct-1M-4bit Model\n",
+    "snapshot_download(repo_id=\"mlx-community/Qwen2.5-7B-Instruct-1M-4bit\", local_dir=f\"{qwen_mlx_dir}/mlx-community__Qwen2.5-7B-Instruct-1M-4bit\", ignore_patterns=[\"*.md\", \".gitattributes\", \"original/\", \"LICENSE.txt\", \"LICENSE\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Download mlx-community/Qwen2.5-7B-Instruct-1M-6bit Model\n",
+    "snapshot_download(repo_id=\"mlx-community/Qwen2.5-7B-Instruct-1M-6bit\", local_dir=f\"{qwen_mlx_dir}/mlx-community__Qwen2.5-7B-Instruct-1M-6bit\", ignore_patterns=[\"*.md\", \".gitattributes\", \"original/\", \"LICENSE.txt\", \"LICENSE\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Download mlx-community/Qwen2.5-7B-Instruct-1M-8bit Model\n",
+    "snapshot_download(repo_id=\"mlx-community/Qwen2.5-7B-Instruct-1M-8bit\", local_dir=f\"{qwen_mlx_dir}/mlx-community__Qwen2.5-7B-Instruct-1M-8bit\", ignore_patterns=[\"*.md\", \".gitattributes\", \"original/\", \"LICENSE.txt\", \"LICENSE\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Download mlx-community/Qwen2.5-7B-Instruct-1M-bf16 Model\n",
+    "snapshot_download(repo_id=\"mlx-community/Qwen2.5-7B-Instruct-1M-bf16\", local_dir=f\"{qwen_mlx_dir}/mlx-community__Qwen2.5-7B-Instruct-1M-bf16\", ignore_patterns=[\"*.md\", \".gitattributes\", \"original/\", \"LICENSE.txt\", \"LICENSE\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Download mlx-community/Qwen2.5-14B-Instruct-4bit Model\n",
     "snapshot_download(repo_id=\"mlx-community/Qwen2.5-14B-Instruct-4bit\", local_dir=f\"{qwen_mlx_dir}/mlx-community__Qwen2.5-14B-Instruct-4bit\", ignore_patterns=[\"*.md\", \".gitattributes\", \"original/\", \"LICENSE.txt\", \"LICENSE\"])"
    ]
@@ -3332,6 +3462,56 @@
    "source": [
     "# Download mlx-community/Qwen2.5-14B-Instruct-bf16 Model\n",
     "snapshot_download(repo_id=\"mlx-community/Qwen2.5-14B-Instruct-bf16\", local_dir=f\"{qwen_mlx_dir}/mlx-community__Qwen2.5-14B-Instruct-bf16\", ignore_patterns=[\"*.md\", \".gitattributes\", \"original/\", \"LICENSE.txt\", \"LICENSE\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Download mlx-community/Qwen2.5-14B-Instruct-1M-3bit Model\n",
+    "snapshot_download(repo_id=\"mlx-community/Qwen2.5-14B-Instruct-1M-3bit\", local_dir=f\"{qwen_mlx_dir}/mlx-community__Qwen2.5-14B-Instruct-1M-3bit\", ignore_patterns=[\"*.md\", \".gitattributes\", \"original/\", \"LICENSE.txt\", \"LICENSE\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Download mlx-community/Qwen2.5-14B-Instruct-1M-4bit Model\n",
+    "snapshot_download(repo_id=\"mlx-community/Qwen2.5-14B-Instruct-1M-4bit\", local_dir=f\"{qwen_mlx_dir}/mlx-community__Qwen2.5-14B-Instruct-1M-4bit\", ignore_patterns=[\"*.md\", \".gitattributes\", \"original/\", \"LICENSE.txt\", \"LICENSE\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Download mlx-community/Qwen2.5-14B-Instruct-1M-6bit Model\n",
+    "snapshot_download(repo_id=\"mlx-community/Qwen2.5-14B-Instruct-1M-6bit\", local_dir=f\"{qwen_mlx_dir}/mlx-community__Qwen2.5-14B-Instruct-1M-6bit\", ignore_patterns=[\"*.md\", \".gitattributes\", \"original/\", \"LICENSE.txt\", \"LICENSE\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Download mlx-community/Qwen2.5-14B-Instruct-1M-8bit Model\n",
+    "snapshot_download(repo_id=\"mlx-community/Qwen2.5-14B-Instruct-1M-8bit\", local_dir=f\"{qwen_mlx_dir}/mlx-community__Qwen2.5-14B-Instruct-1M-8bit\", ignore_patterns=[\"*.md\", \".gitattributes\", \"original/\", \"LICENSE.txt\", \"LICENSE\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Download mlx-community/Qwen2.5-14B-Instruct-1M-bf16 Model\n",
+    "snapshot_download(repo_id=\"mlx-community/Qwen2.5-14B-Instruct-1M-bf16\", local_dir=f\"{qwen_mlx_dir}/mlx-community__Qwen2.5-14B-Instruct-1M-bf16\", ignore_patterns=[\"*.md\", \".gitattributes\", \"original/\", \"LICENSE.txt\", \"LICENSE\"])"
    ]
   },
   {
@@ -3392,6 +3572,66 @@
    "source": [
     "# Download mlx-community/Qwen2.5-72B-Instruct-bf16 Model\n",
     "snapshot_download(repo_id=\"mlx-community/Qwen2.5-72B-Instruct-bf16\", local_dir=f\"{qwen_mlx_dir}/mlx-community__Qwen2.5-72B-Instruct-bf16\", ignore_patterns=[\"*.md\", \".gitattributes\", \"original/\", \"LICENSE.txt\", \"LICENSE\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Download mlx-community/Qwen2.5-VL-7B-Instruct-4bit Model\n",
+    "snapshot_download(repo_id=\"mlx-community/Qwen2.5-VL-7B-Instruct-4bit\", local_dir=f\"{qwen_mlx_dir}/mlx-community__Qwen2.5-VL-7B-Instruct-4bit\", ignore_patterns=[\"*.md\", \".gitattributes\", \"original/\", \"LICENSE.txt\", \"LICENSE\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Download mlx-community/Qwen2.5-VL-7B-Instruct-8bit Model\n",
+    "snapshot_download(repo_id=\"mlx-community/Qwen2.5-VL-7B-Instruct-8bit\", local_dir=f\"{qwen_mlx_dir}/mlx-community__Qwen2.5-VL-7B-Instruct-8bit\", ignore_patterns=[\"*.md\", \".gitattributes\", \"original/\", \"LICENSE.txt\", \"LICENSE\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Download mlx-community/Qwen2.5-VL-7B-Instruct-bf16 Model\n",
+    "snapshot_download(repo_id=\"mlx-community/Qwen2.5-VL-7B-Instruct-bf16\", local_dir=f\"{qwen_mlx_dir}/mlx-community__Qwen2.5-VL-7B-Instruct-bf16\", ignore_patterns=[\"*.md\", \".gitattributes\", \"original/\", \"LICENSE.txt\", \"LICENSE\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Download mlx-community/Qwen2.5-VL-72B-Instruct-4bit Model\n",
+    "snapshot_download(repo_id=\"mlx-community/Qwen2.5-VL-72B-Instruct-4bit\", local_dir=f\"{qwen_mlx_dir}/mlx-community__Qwen2.5-VL-72B-Instruct-4bit\", ignore_patterns=[\"*.md\", \".gitattributes\", \"original/\", \"LICENSE.txt\", \"LICENSE\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Download mlx-community/Qwen2.5-VL-72B-Instruct-8bit Model\n",
+    "snapshot_download(repo_id=\"mlx-community/Qwen2.5-VL-72B-Instruct-8bit\", local_dir=f\"{qwen_mlx_dir}/mlx-community__Qwen2.5-VL-72B-Instruct-8bit\", ignore_patterns=[\"*.md\", \".gitattributes\", \"original/\", \"LICENSE.txt\", \"LICENSE\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Download mlx-community/Qwen2.5-VL-72B-Instruct-bf16 Model\n",
+    "snapshot_download(repo_id=\"mlx-community/Qwen2.5-VL-72B-Instruct-bf16\", local_dir=f\"{qwen_mlx_dir}/mlx-community__Qwen2.5-VL-72B-Instruct-bf16\", ignore_patterns=[\"*.md\", \".gitattributes\", \"original/\", \"LICENSE.txt\", \"LICENSE\"])"
    ]
   },
   {
