--- a/stable-diffusion-models/download.ipynb
+++ b/stable-diffusion-models/download.ipynb
@@ -2024,6 +2024,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Download Prefect Pony XL Model\n",
+    "civitai_download(model_version_id=1199750, local_dir=pony_ckpt_dir)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 154,
    "metadata": {},
    "outputs": [],
@@ -2178,6 +2188,16 @@
    "source": [
     "# Download Illustrious Pencil XL Model\n",
     "hf_hub_download(repo_id=\"bluepen5805/illustrious_pencil-XL\", filename=\"illustrious_pencil-XL-v1.2.0.safetensors\", local_dir=ilxi_ckpt_dir)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Download NoobAI-XL 1.1 Model\n",
+    "hf_hub_download(repo_id=\"Laxhar/noobai-XL-1.1\", filename=\"NoobAI-XL-v1.1.safetensors\", local_dir=ilxi_ckpt_dir)"
    ]
   },
   {
