--- a/run_first.ipynb
+++ b/run_first.ipynb
@@ -471,7 +471,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "py312",
    "language": "python",
    "name": "python3"
   },
@@ -485,7 +485,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "undefined.undefined.undefined"
+   "version": "3.12.9"
   }
  },
  "nbformat": 4,
